[package]
name = "owoify"
version = "0.1.1"
description = "Text owoification library"
readme = "README.md"
license = "MIT"
authors = ["EvilDead <EvilDeaaaadd@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.2.0"
rand = "0.7.0"
